--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -45,3 +45,13 @@ canvas {
     width: 100%;
     height: 100%;
 }
+
+#prompt {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+
+    padding-top: 30vh;
+    font-size: 3em;
+    color: #FFF;
+}
