--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -55,3 +55,75 @@ canvas {
     font-size: 3em;
     color: #FFF;
 }
+
+.panel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #FFF;
+}
+
+.label {
+    margin: 1em;
+    background: #333;
+    border-radius: 0.3em;
+    padding: 1em;
+    text-transform: capitalize;
+}
+
+#loader {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 1em;
+    box-sizing: border-box;
+}
+
+#loader .progress {
+    color: #FFF;
+    width: 100%;
+}
+
+#loader .strechy {
+    background: #555;
+}
+
+.building-detail {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+    margin: 1em;
+    
+}
+
+.building-detail .row {
+    display: flex;
+    flex-direction: row;
+}
+
+.building-detail .row:nth-child(even) {
+    background: #333;
+}
+
+.building-detail .row:nth-child(odd) {
+    background: #444;
+}
+
+.building-detail .row > * {
+    width: 100%;
+    padding: 0.11em 0.5em;
+    box-sizing: border-box;
+}
+
+.building-detail .row > *:nth-child(odd) {
+    color: #BBB;
+}
+
+.building-detail .row > *:nth-child(even) {
+    text-align: right;
+    color: #FFF;
+} 
+
