--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -94,9 +94,9 @@ canvas {
     left: 0;
     display: flex;
     flex-direction: column;
-    max-height: 100vh;
+    max-height: calc(100vh - 2em);
     margin: 1em;
-    
+    overflow-y: auto;
 }
 
 .building-detail .row {
