--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -41,10 +41,10 @@ body {
     height: 100%;
 }
 
-canvas {
+/*canvas {
     width: 100%;
     height: 100%;
-}
+}*/
 
 #prompt {
     position: absolute;
