--- a/docs/style.css
+++ b/docs/style.css
@@ -86,3 +86,23 @@ footer,
 footer a {
     color: #888;
 }
+
+.imgs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    align-items: center;
+    width: 100%;
+}
+
+.imgs > a {
+    display: block;
+    width: 6rem;
+    margin: 0.75rem;
+} 
+
+.imgs > a img {
+    display: block;
+    width: 100%;
+}
