--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,71 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   padding: 0;
   margin: 0;
+  display: flex;
 }
 
+
+/* layout main */
+
 #editor {
-  width: 100vw;
+  width: 60vw;
+  height: 100vh;
+  background: #FFF;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  resize: horizontal;
+  border-right: 1px solid #000;
+}
+
+#d3view {
+  width: 40vw;
   height: 100vh;
   background: #FFF;
 }
 
+/* nodes */
+
+#nodes {
+  display: flex;
+  height: calc(100vh - 3rem);
+}
+
+#nodeArea {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#functionPanel {
+  width: 200px;
+  color: #FFF;
+  position: absolute;
+  height: 100%;
+  z-index: 2;
+}
+
+#nodePanel {
+  position: absolute;
+  right: 0;
+  width: 200px;
+  height: 100%;
+}
+
+#actionPanel {
+  height: 3rem;
+}
+
+
+
+
 .node {
   position: absolute;
   display: flex;
+  background: red;
 }
 
 .node.selected {
@@ -24,16 +77,34 @@ body {
 }
 
 .connector {
-  background: #FF0;
+  background: #FFF;
   display: inline-block;
-  height: 100%;
+  position: relative;
+  height: 20px;
+  width: 20px;
+  vertical-align:top;
 }
 
 .connector:hover {
   background: #F00;
 }
 
-.title {
+.connector[title]:hover::after {
+  content: attr(title);
+  color: #ccc;
+  position: absolute;
+  left: 0;
+}
+
+.connector.in[title]:hover::after {
+  top: -120%;
+}
+
+.connector.out[title]:hover::after {
+  top: 120%;
+}
+
+.node .title {
   align-self: center;
   padding: 0 3px;  
 }
@@ -48,28 +119,51 @@ svg path.connection {
   fill: none;
 }
 
-/*svg path.connection {
-  stroke-width: 2px;
-  stroke: #000;
-  fill: none;
-}*/
-
 svg path.fatline {
   stroke-width: 20px;
-  stroke: #444;
+  stroke: #000;
   opacity: 0.1;
   fill: none;
   cursor: pointer;
 }
 
 svg path.fatline:hover {
-  stroke: #000;
   opacity: 0.5;
 }
 
-#functions {
-  background: #EEE;
-  position: absolute;
-  height: 100vh;
-  width: 200px;
+/* function panel */
+.section-title {
+  padding: 0.5rem 1rem;
+  font-size: 1em;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+.function {
+  cursor: pointer;
+  background: #444;
+  display: flex;
+}
+
+.function:hover {
+  background: #555;
+}
+
+.function .icon {
+  background: #FFF;
+  min-width: 5px;
+}
+
+.function .labels {
+  padding: 0.5rem 1rem;
+}
+
+.function .title {
+  text-transform: capitalize;
+}
+
+.function .description {
+  font-size: 0.8em;
+  color: #DDD;
 }
