--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
+
+  /*text selection */
+  webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 
@@ -17,8 +26,8 @@ body {
   overflow: auto;
   display: flex;
   flex-direction: column;
-  resize: horizontal;
-  border-right: 1px solid #000;
+  /*resize: horizontal;*/
+  border-right: 1px solid #DDD;
 }
 
 #d3view {
@@ -31,23 +40,27 @@ body {
 
 #nodes {
   display: flex;
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 2rem);
+  position: relative;
+  overflow: hidden;
+  background: #F8F8F8;
 }
 
 #nodeArea {
   position: relative;
   width: 100%;
   height: 100%;
-  background: #F8F8F8;
 }
 
 #functionPanel {
-  width: 200px;
+  margin: 2rem 2rem 0 2rem;
   color: #000;
-  border-right: 1px solid #000;
   position: absolute;
-  height: 100%;
+  height: calc(100% - 4rem);
+  width: calc(100% - 4rem);
   z-index: 2;
+  background: #FFF;
+  border: 1px solid #DDD;
 }
 
 #nodePanel {
@@ -58,11 +71,35 @@ body {
 }
 
 #actionPanel {
-  border-top: 1px solid #000;
-  height: 3rem;
+  border-top: 1px solid #DDD;
+  display: flex;
+  height: 2rem;
 }
 
 /* function panel */
+#functionSearchBar {
+  display: flex;
+  border-bottom: 1px solid #DDD;
+}
+
+#functionSearchBar > * {
+  display: block;
+  padding: 1rem;
+}
+
+#functionSearchBar input {
+  border: none;
+  width: 100%;
+}
+
+#clearFunctionSearch {
+  cursor: pointer;
+}
+
+#clearFunctionSearch:hover {
+  background: #EEE;
+}
+
 .section-title {
   padding: 0.5rem 1rem;
   font-size: 1em;
@@ -74,7 +111,6 @@ body {
 .function {
   cursor: pointer;
   display: flex;
-  margin: 5px;
 }
 
 .function:hover {
@@ -114,6 +150,7 @@ body {
 }
 
 .node.selected {
+
 }
 
 .connectors {
@@ -141,6 +178,7 @@ body {
   left: 0;
   padding: 5px 10px;
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 .connector.in[title]:hover::after {
@@ -151,36 +189,10 @@ body {
   top: 110%;
 }
 
-.connector.string {
-  background: #abe5ff
-}
-
-
-.connector.number {
-  background: #ffcca2
-}
-
-
-.connector.color {
-  background: #dfff8a
-}
-
-
-.connector.bool {
-  background: #eba2ff
-}
-
-
-.connector.file {
-  background: #8ba6ff
-}
-
-.connector.vec3 {
-  background: #ff7764
-}
-
 svg {
+  z-index: 0;
   position: absolute;
+  overflow: visible;
 }
 
 svg path.connection {
@@ -296,3 +308,24 @@ input[type="checkbox"]:checked ~ .checkmark:after {
 }
 
 
+/* action panel */
+
+#actionPanel > * {
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+#actionPanel > *:hover {
+  background: #EEE;
+}
+
+#actionPanel .delimiter {
+  border-right: 1px solid #DDD;
+}
+
+#actionPanel .active {
+  background: #DDD;
+}
