--- a/docs/style.css
+++ b/docs/style.css
@@ -19,7 +19,7 @@ html, body{
     padding: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: auto;
+    overflow: none;
 }
 
 .strip {
